--- a/roles/upstash_setup/templates/docker-compose.yml.j2
+++ b/roles/upstash_setup/templates/docker-compose.yml.j2
@@ -10,6 +10,6 @@ services:
     image: hiett/serverless-redis-http:latest
     environment:
       SRH_MODE: env
-      SRH_TOKEN: {{ vault_upstash_token }}
+      SRH_TOKEN: {{ upstash_token }}
       SRH_CONNECTION_STRING: "redis://redis:6379" # Using `redis` hostname since they're in the same Docker network.
     restart: always
