add defaults to app and upstash roles

--- a/roles/app_setup/templates/env.j2
+++ b/roles/app_setup/templates/env.j2
@@ -22,4 +22,4 @@ CLERK_SECRET_KEY="{{ vault_clerk_secret_key }}"
 # Upstash
 # Create a new redis database on https://console.upstash.com/ and copy the url and token.
 UPSTASH_REDIS_REST_URL="http://{{ upstash_host }}:{{ upstash_port }}"
-UPSTASH_REDIS_REST_TOKEN="{{ vault_upstash_token }}"
+UPSTASH_REDIS_REST_TOKEN="{{ upstash_token }}"
