--- a/roles/app_setup/templates/env.j2
+++ b/roles/app_setup/templates/env.j2
@@ -16,8 +16,8 @@ DATABASE_URL="postgresql://{{ postgresql_user.name }}:{{ postgresql_user.passwor
 
 # Clerk
 # https://clerk.com/docs/nextjs/set-environment-keys
-NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY="{{ vault_next_public_clerk_publishable_key }}"
-CLERK_SECRET_KEY="{{ vault_clerk_secret_key }}"
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY="{{ next_public_clerk_publishable_key }}"
+CLERK_SECRET_KEY="{{ clerk_secret_key }}"
 
 # Upstash
 # Create a new redis database on https://console.upstash.com/ and copy the url and token.
